Feat: add signup and login forms, containers and pages

--- a/client/app/styles/styles.scss
+++ b/client/app/styles/styles.scss
@@ -10,3 +10,12 @@
 }
 <div className="my-style" />
 */
+
+input {
+  max-width: 320px;
+  outline: none;
+}
+
+.grommetux-form-field {
+  max-width: 430px;
+}
