--- a/client/app/src/pages/LandingPage/index.module.scss
+++ b/client/app/src/pages/LandingPage/index.module.scss
@@ -1,10 +1,8 @@
 .container {
-  height: 100vh;
+  min-height: calc(100vh - 74px);
   width: 100%;
-  background: linear-gradient(24deg, #7622aa 0%, #8390bb 100%);
-};
-
-.header {
-  font-size: 32px;
-  font: 'Open Sans';
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  background-color: #ECEFF1;
 }
