--- a/client/app/src/components/EventInfo/index.module.scss
+++ b/client/app/src/components/EventInfo/index.module.scss
@@ -1,3 +1,11 @@
 .eventInfo {
-  
+  border-radius: 5px;
+  border: 1px solid #e6e6e6;
+  margin-bottom: 30px;
+  padding: 30px !important;
+  border-radius: 5px;
+}
+
+.eventHeading {
+  border-bottom: 1px solid rgba(0,0,0,.12);
 }
