--- a/client/app/styles/styles.scss
+++ b/client/app/styles/styles.scss
@@ -11,11 +11,23 @@
 <div className="my-style" />
 */
 
-input {
-  max-width: 320px;
+input, textarea {
+  max-width: 430px;
   outline: none;
+  @media screen and (max-width: 480px) {
+    max-width: 330px;
+  }
+  @media screen and (max-width: 330px) {
+    max-width: 200px;
+  }
 }
 
 .grommetux-form-field {
   max-width: 430px;
+  @media screen and (max-width: 480px) {
+    max-width: 330px;
+  }
+  @media screen and (max-width: 330px) {
+    max-width: 200px;
+  }
 }
