Feat: run production script to create bundle

--- a/client/app/src/components/SingleEvent/index.module.scss
+++ b/client/app/src/components/SingleEvent/index.module.scss
@@ -5,3 +5,12 @@
   margin-bottom: 80px;
   position: relative;
 }
+
+.icon {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.paragraph {
+  padding: 0 40px;
+}
