Feat: add pagination for the events list

--- a/client/app/styles/styles.scss
+++ b/client/app/styles/styles.scss
@@ -31,3 +31,10 @@ input, textarea {
     max-width: 200px;
   }
 }
+
+.grommetux-list__more {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  padding-top: 30px;
+}
