--- a/client/app/src/components/SingleEvent/index.module.scss
+++ b/client/app/src/components/SingleEvent/index.module.scss
@@ -4,6 +4,11 @@
   width: 100%;
   margin-bottom: 80px;
   position: relative;
+  min-width: 500px;
+  @media screen and (max-width: 500px) {
+    min-width: 300px;
+    width: 100%;
+  }
 }
 
 .icon {
