Fix: update event mutation to downcase the type

--- a/client/app/src/components/LoginForm/index.module.scss
+++ b/client/app/src/components/LoginForm/index.module.scss
@@ -1,3 +1,11 @@
 .loginForm {
-  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  padding: 24px;
+}
+
+.formField {
+  max-width: 430px;
 }
