--- a/client/app/styles/styles.scss
+++ b/client/app/styles/styles.scss
@@ -11,6 +11,8 @@
 <div className="my-style" />
 */
 
+body, html { overflow-x:hidden; }
+
 input, textarea {
   max-width: 380px;
   outline: none;
@@ -18,7 +20,7 @@ input, textarea {
     max-width: 330px;
   }
   @media screen and (max-width: 330px) {
-    max-width: 280px;
+    max-width: 220px;
   }
 }
 
@@ -28,7 +30,7 @@ input, textarea {
     max-width: 330px;
   }
   @media screen and (max-width: 330px) {
-    max-width: 200px;
+    max-width: 280px;
   }
 }
 
