Feat: add rsvp mutation

--- a/client/app/src/containers/LandingContainer/index.module.scss
+++ b/client/app/src/containers/LandingContainer/index.module.scss
@@ -11,6 +11,10 @@
   text-shadow: 2px 2px 0 #169dc1;
 }
 
+.paragraph {
+  padding: 10px;
+}
+
 .article {
   background: #fff;
   box-shadow: 0 2px 4px 0 rgba(167, 157, 144, 0.52);
