Feat: add location api to the index template

--- a/client/config/templates/_index.html
+++ b/client/config/templates/_index.html
@@ -10,6 +10,6 @@
 <body>
   <!-- The app will bootstrap into this div -->
   <div id="app"></div>
-  
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_XoCQVsMYeY6Ff_-yrz1PpMlUpGJyn7g&libraries=places"></script>
 </body>
 </html>
