--- a/client/app/src/components/SignupForm/index.module.scss
+++ b/client/app/src/components/SignupForm/index.module.scss
@@ -4,6 +4,8 @@
   justify-content: center;
   background-color: #fff;
   padding: 24px;
+  max-width: 100vw;
+  box-sizing: border-box;
 }
 
 .formField {
