--- a/client/app/src/components/SignupForm/index.module.scss
+++ b/client/app/src/components/SignupForm/index.module.scss
@@ -11,3 +11,9 @@
 .formField {
   max-width: 430px;
 }
+
+.listItem {
+  margin-top: 5px !important;
+  margin-bottom: 5px !important;
+  color: black !important;
+}
